crates/phux-tui/src/render/chrome/snapshots/phux_tui__render__chrome__sidebar__tests__sectioned_layout_snapshot_attention.snap
---
source: crates/phux-tui/src/render/chrome/sidebar.rs
expression: "strip_text(&p, rect)"
---
 Agents                9 │
 ● phux            codex │
 ● feat-auth      claude │
 ◐ wave-0         claude │
 ◐ wave-1         claude │
 ◐ wave-2         claude │
 ◐ wave-3         claude │
   +3                    │
 Sessions              2 │
 mini               here │
 ○ development           │
   ● phux           main │
 ● feat-auth          ●1 │
                         │
                         │
                         │
                         │
 + new window            ‹
