crates/phux-tui/src/render/chrome/snapshots/phux_tui__render__chrome__sidebar__tests__sectioned_layout_snapshot_empty.snap
---
source: crates/phux-tui/src/render/chrome/sidebar.rs
expression: "strip_text(&p, rect)"
---
 Agents                  │
   none running yet      │
                         │
                         │
                         │
                         │
                         │
                         │
 Sessions                │
   no sessions           │
                         │
                         │
                         │
                         │
                         │
                         │
                         │
 + new window            ‹
