crates/phux-tui/src/render/chrome/snapshots/phux_tui__render__chrome__sidebar__tests__sectioned_layout_snapshot_quiet.snap
---
source: crates/phux-tui/src/render/chrome/sidebar.rs
expression: "strip_text(&p, rect)"
---
 Agents                  │
   —                     │
                         │
                         │
                         │
                         │
                         │
                         │
 Sessions              3 │
 mini               here │
 ○ development           │
   ● phux           main │
 ◐ feat-auth          ◐1 │
 devbox                  │
 ○ prod-3             ?2 │
                         │
                         │
 + new window            ‹
