crates/phux-tui/src/render/chrome/snapshots/phux_tui__render__chrome__sidebar__tests__sectioned_layout_snapshot_short.snap
---
source: crates/phux-tui/src/render/chrome/sidebar.rs
expression: "strip_text(&p, rect)"
---
 Agents                1 │
 ● phux            codex │
                         │
                         │
 Sessions              2 │
 mini               here │
 ○ development           │
   ● phux           main │
 +1 sessions, +1 windows │
 + new window            ‹
